# UsefulHabitsTracker

./: .env.sample  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
