[tool.poetry]
name = "kurs-7-drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
stripe = "^10.6.0"
redis = "^5.0.8"
drf-yasg = "^1.21.7"
eventlet = "^0.36.1"
celery = "^5.4.0"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
